# bake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
antlr/: BakeLexer.g4  BakeParser.g4
examples/: fizzbuzz.bake  helloWorld.bake  preview.md
scripts/: generateAntlrFiles.sh
src/: main.cpp
src/parser/: Bake.g4  BakeLexer.g4  TypeCheckVisitor.cpp  TypeCheckVisitor.h
tests/input/: add.bake  divide.bake  ifTests.bake  loopConditionTests.bake  modulo.bake  multiply.bake  subtract.bake
